fix: sidebar not collapsed by default, mobile logo styles

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -98,7 +98,7 @@
         top: 24px;
         width: 32px;
         height: 48px;
-        right: -32px;
+        right: -31px;
     }
 }
 
